--- a/src/components/Newsitem.css
+++ b/src/components/Newsitem.css
@@ -23,7 +23,7 @@
 .news-search{
     width: 500px;
     padding: 20px;
-    border: 1px solid blue;
+    border: 1px solid #ffffff;
     border-radius: 10px 10px 0px 0px;
     border-bottom: none;
 }
